# device-detection-rust

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
src/: api.rs  benchmark.rs  c.rs  cli.rs  common.rs  hash.rs  lib.rs  test.rs  trie.rs
src/properties/: device_type.rs  mod.rs
src/properties/browser_name/: mod.rs  with_mode.rs  without_mode.rs
src/properties/platform_name/: enumerated.rs  mod.rs
src/shim/: mod.rs  shim.cpp  shim.hpp  wrapper.c  wrapper.h
src/values/: mod.rs
src/values/browser_name/: mod.rs  with_mode.rs  without_mode.rs
src/values/platform_name/: mod.rs
