[package]
name = "fiftyonedegrees"
version = "0.2.9"
edition = "2018"
license = "EUPL"
authors = ["Paris Holley <mail@parisholley.com>"]
description = "A wrapper around the 51Degrees device detection C library."

[lib]
path = "src/lib.rs"

[[example]]
name = "benchmark"
path = "src/benchmark.rs"

[features]
browser-name-enum = []
browser-name-enum-mode = []

[dependencies]
cxx = "1.0"

[dev-dependencies]
rayon = "1.5.1"
glob = "0.3.0"

[build-dependencies]
cc = "1.0.68"