[package]
name = "fiftyonedegrees"
version = "0.2.19"
edition = "2018"
license = "MIT"
authors = ["Paris Holley <mail@parisholley.com>"]
include = ["device-detection-cxx/src/*.*", "device-detection-cxx/src/hash/*.*", "device-detection-cxx/src/common-cxx/*.*", "src/**/*", "build.rs"]

description = "A wrapper around the 51Degrees device detection C library."

[lib]
path = "src/lib.rs"

[[example]]
name = "benchmark"
path = "src/benchmark.rs"

[dev-dependencies]
rayon = "1.5.1"

[build-dependencies]
cc = "1.0.68"
